# remote-mcpserver-sample

./: .env.example  .gitignore  README.md  package.json  tsconfig.cloudflare.json  tsconfig.json
chat-ui/: .env.example  README.md  package.json  tailwind.config.js
chat-ui/src/app/: globals.css  layout.tsx  page.tsx
chat-ui/src/app/api/mcp/call-tool/: route.ts
chat-ui/src/app/api/mcp/connect/: route.ts
chat-ui/src/components/: ChatInterface.tsx
chat-ui/src/lib/: mcp-client.ts
client/: .env.example  README.md  package.json  tsconfig.json
client/examples/: calculator-example.ts  storage-example.ts
client/src/: interactive.ts  local-client.ts  remote-client.ts
config/: README.md  claude_desktop_cloudflare.json  claude_desktop_local.json  claude_desktop_local_dev.json  claude_desktop_remote.json  claude_desktop_remote_production.json
deploy/: .dockerignore  Dockerfile  nginx.conf  railway.json  render.yaml  wrangler.toml
docs/: DEPLOY.md  DIFFERENCES.md  TROUBLESHOOTING.md
go/: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  build.sh  go.mod
go/cmd/local/: main.go
go/cmd/remote/: main.go
go/config/: claude_desktop_local.json  claude_desktop_remote.json
go/internal/mcp/: server.go  transport_sse.go  transport_stdio.go  types.go
go/internal/tools/: calculator.go  echo.go  storage.go  system.go
python/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
python-client/: .env.example  README.md  requirements.txt
python-client/src/: remote_client.py
python/config/: claude_desktop_local.json  claude_desktop_remote.json
python/src/local/: __init__.py  server.py
python/src/remote/: __init__.py
python/src/remote/fastapi/: __init__.py  server.py
python/src/shared/: __init__.py
python/src/shared/tools/: __init__.py  calculator.py  echo.py  storage.py  system_info.py
rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
rust/config/: claude_desktop_local.json  claude_desktop_remote.json
rust/mcp-core/: Cargo.toml
rust/mcp-core/src/: lib.rs  server.rs  types.rs
rust/mcp-core/src/tools/: calculator.rs  echo.rs  mod.rs  storage.rs  system.rs
rust/mcp-local/: Cargo.toml
rust/mcp-local/src/: main.rs
rust/mcp-remote/: Cargo.toml
rust/mcp-remote/src/: main.rs
src/local/: server.ts
src/remote/cloudflare/: worker.ts
src/remote/express/: server.ts
src/shared/tools/: calculator.ts  echo.ts  index.ts  storage.ts  system-info.ts
src/shared/types/: index.ts
src/utils/: auth.ts  logger.ts
