[workspace]
members = ["mcp-local", "mcp-remote", "mcp-core"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["MCP Server Sample"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# For remote server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenv = "0.15"

# Async
async-trait = "0.1"
futures = "0.3"
