[package]
name = "mcp-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mcp-remote"
path = "src/main.rs"

[dependencies]
mcp-core = { path = "../mcp-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
dotenv.workspace = true
futures.workspace = true
